--- a/hugo-config.yaml
+++ b/hugo-config.yaml
@@ -45,12 +45,12 @@ menu:
       - Name: API
         Weight: 30
         URL: /api/
-        #- Name: RAML
-        #  Weight: 32
-        #  URL: /raml/
-      - Name: Blueprint
-        Weight: 33
-        URL: /blueprint/
+      - Name: RAML
+        Weight: 32
+        URL: /raml/
+      #- Name: Blueprint
+      #  Weight: 33
+      #  URL: /blueprint/
       - Name: Schemas
         Weight: 34
         URL: /schemas/
